--- a/Mission7/Pages/Admin/AdminLayout.razor
+++ b/Mission7/Pages/Admin/AdminLayout.razor
@@ -1,9 +1,9 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="bg-info text-white p-2">
+<div class="text-white p-2" style="background-color: rgb(155,168,137)">
     <div class="container-fluid">
         <div class="row">
-            <div class="col" style="font-family:Chivo">
+            <div class="col" style="font-family: Chivo">
                 <span class="navbar-brand m-lg-2">Little Corner Bookstore Admin</span>
             </div>
             <div class="col-2 text-right" style="font-family:Chivo">
