--- a/Mission7/Views/Account/Login.cshtml
+++ b/Mission7/Views/Account/Login.cshtml
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="bg-dark text-white p-2">
+    <div class="text-white p-2" style="background-color: rgb(155,168,137)">
         <span class="navbar-brand m-lg-2" style="font-family:Chivo">Little Corner Bookstore</span>
     </div>
 
