--- a/Mission7/Views/Shared/BookSummary.cshtml
+++ b/Mission7/Views/Shared/BookSummary.cshtml
@@ -26,7 +26,7 @@
         <input type="hidden" name="returnUrl" value="@ViewContext.HttpContext.Request.PathAndQuery()" />
 
         <span class="card-text">
-            <button type="submit" class="btn btn-success btn-sm float-end">Buy</button>
+            <button type="submit" class="btn btn-warning btn-sm float-end">Buy</button>
         </span>
     </form>
 </div>
