--- a/Mission7/Views/Shared/_Layout.cshtml
+++ b/Mission7/Views/Shared/_Layout.cshtml
@@ -10,8 +10,8 @@
     <link href="~/lib/css/all.min.css" rel="stylesheet" />
 </head>
 <body>
-    <div class="bg-dark text-white p-2">
-        <div class="container-fluid">
+    <div class="text-white p-2" style="background-color: rgb(155,168,137)">
+        <div class="container-fluid" >
             <div class="row">
                 <span class="col navbar-brand ml-2" style="font-family:Chivo">Little Corner Bookstore</span>
                 <div class="col-6 text-right">
