--- a/Mission7/Views/Account/Login.cshtml
+++ b/Mission7/Views/Account/Login.cshtml
@@ -19,6 +19,11 @@
         <span class="navbar-brand m-lg-2" style="font-family:Chivo">Little Corner Bookstore</span>
     </div>
 
+    <div class="mt-4 p-5 text-white rounded" style="background-color: rgb(155,168,137)">
+        <h1>Little Corner Bookstore Admin Login</h1>
+        <p>Enter your credentials to continue.</p>
+    </div>
+
     <div class="m-1 p-1">
         <div class="text-danger" asp-validation-summary="All" style="font-family:Chivo"></div>
 
